# ae

./: .bumpversion.cfg  .gitignore  README.md  ae.example.yml  flake.nix  pyproject.toml
ae/: __init__.py  ae.py  config.py  parallel.py  resources.py  shell.py
ae/aws/: __init__.py  credentials.py  ec2.py  ecs.py  logs.py  opensearch.py  session.py  signing.py
ae/commands/: __init__.py  connect.py  es.py  logs.py  port_forward.py  run_command.py
ae/decorators/: __init__.py  find_resources.py
docs/: _config.yml  configuration.md  connect.md  extending.md  index.md  logs.md  port-forward.md  quick-start.md  run-command.md
