[tool.poetry]
name = "ae"
version = "0.0.1"
description = ""
authors = ["Leigh Oliver <leigh@leigholiver.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
click-aliases = "^1.0.1"
PyYAML = "^6.0"
boto3 = "^1.26.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
ae = "ae:ae"
