[tool.poetry]
name = "ae"
version = "0.0.2"
description = ""
authors = ["Leigh Oliver <leigh@leigholiver.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
click-aliases = "^1.0.1"
PyYAML = "^6.0"
boto3 = "^1.26.8"
inquirerpy = "^0.3.4"
requests-aws4auth = "^1.2.3"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
ae = "ae:ae"
